--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -28,7 +28,7 @@ composeBom = "2023.08.00"
 lifecycleRuntimeKtxVersion = "2.6.2"
 lifecycleViewmodelCompose = "2.6.2"
 loggingInterceptor = "5.0.0-alpha.2"
-navigationCompose = "2.7.5"
+navigationCompose = "2.8.0-beta02"
 okhttp = "5.0.0-alpha.2"
 pagingRuntimeKtx = "3.3.0"
 paletteKtx = "1.0.0"
@@ -38,8 +38,9 @@ roomKtx = "2.6.1"
 roomPaging = "2.6.1"
 roomRuntime = "2.6.1"
 roomTesting = "2.6.1"
+serialization = "1.6.3"
 timber = "5.0.1"
-ucrop = "2.2.6"
+ucrop = "2.2.9"
 
 # Android Config
 targetSdk = "34"
@@ -48,7 +49,7 @@ minSdk = "24"
 versionCode = "1"
 versionName = "1.0"
 appcompat = "1.7.0"
-material = "1.12.0"
+material3Android = "1.2.1"
 
 [libraries]
 accompanist-flowlayout = { module = "com.google.accompanist:accompanist-flowlayout", version.ref = "accompanistFlowlayout" }
@@ -103,7 +104,8 @@ retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit
 timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
 ucrop = { module = "com.github.yalantis:ucrop", version.ref = "ucrop" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
-material = { group = "com.google.android.material", name = "material", version.ref = "material" }
+kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "serialization"}
+androidx-material3-android = { group = "androidx.compose.material3", name = "material3-android", version.ref = "material3Android" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
@@ -112,3 +114,4 @@ dagger-hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hi
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 kotlin-parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize",  version.ref = "kotlin"  }
 android-library = { id = "com.android.library", version.ref = "agp" }
+kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
